--- a/Conference Page/index.css
+++ b/Conference Page/index.css
@@ -1,3 +1,8 @@
+.container-not-display{
+    display: none !important
+}
+
+
 .conference-bg-container {
     text-align: center;
     font-family: Roboto;
@@ -44,3 +49,4 @@
     margin-left: 10px;
     margin-right: 10px;
 }
+
